option('fuzzing', type: 'boolean', value: false, description: 'Enable fuzzing tests')
option('lib_fuzzing_engine', type : 'string', value : '', description : 'Path to the libFuzzer engine library')
option('trace', type: 'boolean', value: true, description: 'Enable tracing events with OpenTelemetry')
