# Copyright (C) 2019 by Sukchan Lee <acetcom@gmail.com>

# This file is part of Open5GS.

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

libinc = include_directories('.')

subdir('core')
subdir('proto')
subdir('dbi')
subdir('crypt')
subdir('ipfw')
subdir('tun')
subdir('app')
subdir('metrics')
subdir('sctp')
subdir('diameter')
subdir('asn1c')
subdir('ngap')
subdir('s1ap')
subdir('sbcap')
subdir('nas')
subdir('gtp')
subdir('pfcp')
subdir('sbi')
