# Copyright (C) 2019 by Sukchan Lee <acetcom@gmail.com>

# This file is part of Open5GS.

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

testinc = include_directories('.')

subdir('core')
subdir('crypt')
subdir('sctp')
subdir('common')
subdir('app')
subdir('unit')
subdir('epc-simple')
subdir('mnc3')
subdir('volte')
subdir('csfb')
subdir('cups')
subdir('minimal')
subdir('registration')
subdir('00101')
subdir('23504')
